[gd_scene load_steps=2 format=3 uid="uid://b7u4jpbkx823u"]

[ext_resource type="Script" path="res://src/UI/EntityHolder.gd" id="1_jvytc"]

[node name="EntityHolder" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1012.0
offset_bottom = -586.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvytc")

[node name="Sprite" type="Sprite2D" parent="."]
offset = Vector2(70, 70)

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
